syntax = "proto3";

option go_package = "github.com/tinkerbell/pbnj/api/v1";
option ruby_package = "Pbnj::Api::V1";

package github.com.tinkerbell.pbnj.api.v1;

import "api/v1/common.proto";

service Diagnostic {
    rpc Screenshot (ScreenshotRequest) returns (ScreenshotResponse);
    rpc ClearSystemEventLog (ClearSystemEventLogRequest) returns (ClearSystemEventLogResponse);
    rpc GetSystemEventLog (GetSystemEventLogRequest) returns (GetSystemEventLogResponse);
    rpc GetSystemEventLogRaw (GetSystemEventLogRawRequest) returns (GetSystemEventLogRawResponse);
}

message ScreenshotRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
}

message ScreenshotResponse {
    bytes image = 1;
    string filetype = 2;
}

message ClearSystemEventLogRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
}

message ClearSystemEventLogResponse {
    string task_id = 1;
}

message GetSystemEventLogRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
}

message SystemEventLogEntry {
    string id = 1;
    string timestamp = 2;
    string description = 3;
    string message = 4;
}

message GetSystemEventLogResponse {
    repeated SystemEventLogEntry events = 1;
}

message GetSystemEventLogRawRequest {
    v1.Authn authn = 1;
    v1.Vendor vendor = 2;
}

message GetSystemEventLogRawResponse {
    string log = 1;
}
